# HW-main

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.github/workflows/: ci.yml
ADS1115/: ADS1115.cpp  ADS1115.hpp
IMUtest/: IMUi2cTest.py  MPU6050Driver.py
MAX30102/: HeartRate.cpp  JS_HeartRate.cpp  MAX30102.cpp  MAX30102.hpp  test2.cpp
MAX30102 Test programs/: test.cpp  test3.cpp
buzzerTest/: buzzerTest.py  simpleHighLowTest.py
cameraTest/: simple_camera.py
include/: ADS1115.hpp  HeartRate.hpp  MAX30102.hpp  MPU6050.hpp  TestUtility.hpp
pressureSensorTest/: ADS1115.cpp  ADS1115.hpp  I2CDevice.cpp  I2CDevice.hpp  ads1115_test  ads1115_test.cpp  ads_test  main.cpp
src/: ADS1115.cpp  HeartRate.cpp  JS_HeartRate.cpp  MAX30102.cpp  MPU6050.cpp  main.cpp
test/: test_ads1115_init.cpp  test_max30102_init.cpp  test_mpu6050_init.cpp
